few more details
